//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  firstName String [not null]
  lastName String [not null]
  role Role [not null, default: 'MEMBER']
  isActive Boolean [not null, default: true]
  lastLoginAt DateTime
  resetToken String
  resetTokenExpiry DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  authoredNews news [not null]
  authoredActivities activities [not null]
  authoredProjects projects [not null]
  contactMessages contacts [not null]
}

Table members {
  id String [pk]
  studentId String [unique, not null]
  phone String
  year Int [not null]
  academicYear Int [not null, default: 2568]
  department String [not null]
  faculty String [not null]
  position String
  division String
  joinDate DateTime [default: `now()`, not null]
  isActive Boolean [not null, default: true]
  avatar String
  email String
  name String [not null]
}

Table news {
  id String [pk]
  title String [not null]
  content String [not null]
  excerpt String
  authorId String [not null]
  priority Priority [not null, default: 'MEDIUM']
  isPinned Boolean [not null, default: false]
  status NewsStatus [not null, default: 'DRAFT']
  publishedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  slug String [unique, not null]
  viewCount Int [not null, default: 0]
  image String
  attachments String
  author users [not null]
}

Table activities {
  id String [pk]
  title String [not null]
  description String [not null]
  authorId String [not null]
  projectId String
  type ActivityType [not null]
  startDate DateTime [not null]
  endDate DateTime
  location String
  status ActivityStatus [not null, default: 'PLANNING']
  isPublic Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  image String
  gallery String
  author users [not null]
  project projects
}

Table projects {
  id String [pk]
  code String [unique, not null]
  title String [not null]
  description String [not null]
  authorId String [not null]
  academicYear Int [not null]
  semester Int
  status ProjectStatus [not null, default: 'PLANNING']
  startDate DateTime [not null]
  endDate DateTime [not null]
  isActive Boolean [not null, default: true]
  image String
  planFile String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  budget Float
  author users [not null]
  activities activities [not null]
}

Table documents {
  id String [pk]
  title String [not null]
  description String
  type String [not null]
  fileName String [not null]
  fileUrl String [not null]
  fileSize Int [not null]
  version String
  isPublic Boolean [not null, default: true]
  accessLevel AccessLevel [not null, default: 'PUBLIC']
  downloadCount Int [not null, default: 0]
  uploadedBy String [not null]
  approvedBy String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expiryDate DateTime
}

Table contacts {
  id String [pk]
  name String [not null]
  email String [not null]
  phone String
  subject String [not null]
  message String [not null]
  category String [not null, default: 'general']
  priority Priority [not null, default: 'MEDIUM']
  status ContactStatus [not null, default: 'PENDING']
  userId String
  assignedTo String
  repliedBy String
  repliedAt DateTime
  reply String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users
}

Enum Role {
  ADMIN
  MEMBER
}

Enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum NewsStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

Enum ActivityType {
  WORKSHOP
  SEMINAR
  COMPETITION
  VOLUNTEER
  SOCIAL
  TRAINING
  MEETING
  CEREMONY
  FUNDRAISING
  EXHIBITION
  ACADEMIC
  SPORT
  ART_CULTURE
}

Enum ActivityStatus {
  PLANNING
  OPEN_REGISTRATION
  FULL
  IN_PROGRESS
  COMPLETED
  CANCELLED
  POSTPONED
}

Enum ProjectStatus {
  PLANNING
  PENDING_APPROVAL
  APPROVED
  IN_PROGRESS
  COMPLETED
  ON_HOLD
  CANCELLED
  CLOSED
}

Enum AccessLevel {
  PUBLIC
  MEMBER_ONLY
  ADMIN_ONLY
  RESTRICTED
}

Enum ContactStatus {
  PENDING
  IN_PROGRESS
  REPLIED
  CLOSED
}

Ref: news.authorId > users.id

Ref: activities.authorId > users.id

Ref: activities.projectId > projects.id

Ref: projects.authorId > users.id

Ref: contacts.userId > users.id